assets/css/style.css
/*
  style
  Descript:
  css for home page

  File name:     style.css
  Maintainer:    Kyle Gortych
  Created:       05-08-2022
  Last Modified: 01/12/2023
 */

@font-face {
  font-family: shure;
  src: url("../fonts/Shure Tech Mono Nerd Font Complete Mono Windows Compatible.ttf");
}

@font-face {
  font-family: enix;
  src: url("../fonts/Enixe.ttf");
}

:root {
  --darkgray-clr: hsl(0, 0%, 30%);
  --lightgray-clr: hsl(0, 0%, 50%);
  --sky-clr: hsl(205, 100%, 50%);
}

body, html {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: shure;
  background-color: white;
}

.hero-image {
  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/hero.webp");
  height: 70%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.hero-text {
  text-align: center;
  position: absolute;
  inset: 70% 0 0 50%;
  transform: translate(-50%, -50%);
  color: white;
  font: 3rem enix;
}

.navbar {
  position: fixed;
  width: 100%;
  top: 0;
  background-color: rgba(60, 60, 60, 0.7);
}

.navbar li {
  list-style: none;
  margin: 1em;
}

.navbar a {
  font-size: 1.5rem;
  text-decoration: none;
  color: white;
  padding: 0.2em;
}

.navbar a:hover{
  background-color: rgba(240, 240, 240, 0.7);
  color: black;
  transition: 1s;
}

section {
  padding: 0 150px 0 25px;
}

a {
  color: red;
  text-decoration: none;
}

a:hover {
  background-color: #ccc;
}

.container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.slider {
    display: block;
    position: relative;
    width: 100%;
    max-width: 900px;
    margin: 10px;
    background-color: white;
    overflow: hidden;
}

.slider__slides {
  width: 100%;
  padding-top: 66%;
}

.slider__slide {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 50px;
    font-weight: bold;   
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: none;
    transition: 1s;
    opacity: 0;
}

.slider__slide.active {
    opacity: 1;
}

.slider__slide img {
  width: 100%;
}

.slider__nav-button {
    position: absolute;
    height: 70px;
    width: 70px;
    background-color: #333;
    opacity: .8;
    cursor: pointer;
}

#nav-button--prev {
    top: 50%;
    left: 0;
    transform: translateY(-50%);
}

#nav-button--next {
    top: 50%;
    right: 0;
    transform: translateY(-50%);
}

#nav-button--prev::after,
#nav-button--next::after {
    content: "";
    position: absolute;
    border: solid white;
    border-width: 0 4px 4px 0;
    display: inline-block;
    padding: 3px;
    width: 40%;
    height: 40%;
}

#nav-button--next::after{
    top: 50%;
    right: 50%;
    transform: translate(25%, -50%) rotate(-45deg);
}

#nav-button--prev::after {
    top: 50%;
    right: 50%;
    transform: translate(75%, -50%) rotate(135deg);
}

.slider__nav {
    position: absolute;
    bottom: 3%;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
}

.slider__navlink {
    display: inline-block;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    border: 1px #fff solid;
    background-color: #333;
    opacity: 1;
    margin: 0 10px 0 10px;
    cursor: pointer;
}

.slider__navlink.active {
    background-color: #fff;
    border: 1px #333 solid;
}

.pdf {
  margin: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
}

footer {
  background: #ccc url("../images/user-icon.webp") no-repeat left center;
  padding: 25px;
}

footer :is(h2,p) {
  padding-left: 170px;
}

/* media queries | mobile first*/

@media (min-width: 50em) {
  .navbar li {
    display: inline;
    margin: 0;
  }
  
  .navbar a {
    padding:  0.6em;
  }
}

